--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Ahmed Araby is the founder and talent acquisition lead at Instant Hires, helping SaaS startups scale with vetted sales talent. Learn more about his journey and approach.">
-  <title>Ahmed Araby – Founder of Instant Hires | SaaS Sales Talent Acquisition</title>
+  <title>Ahmed Araby – Founder of Instant Hires | Talent Acquisition</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <div class="nav-links">
         <a href="contact.html">Contact</a>
-        <a href="#">Blog</a>
+        <a href="https://medium.com/@ahmeddaraby">Blog</a>
       </div>
     </nav>
   </header>
