--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <nav class="navbar">
       <div class="nav-links">
         <a href="contact.html">Contact</a>
-        <a href="https://medium.com/@ahmeddaraby">Blog</a>
+        <a href="https://medium.com/@ahmedarabyy">Blog</a>
       </div>
     </nav>
   </header>
