--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="nav-links">
-        <a href="contact.html">Contact</a>
+        <a href="contact/">Contact</a>
         <a href="https://medium.com/@ahmedarabyy">Blog</a>
       </div>
     </nav>
