--- a/contact/index.html
+++ b/contact/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <meta name="description" content="Get in touch with Ahmed Araby, founder of Instant Hires. For inquiries, collaborations, or conversations, feel free to reach out directly or via LinkedIn.">
   <title>Contact Ahmed Araby – Let’s Connect</title>
-  <link rel="stylesheet" href="style.css" />
+  <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header class="header">
