--- a/contact/index.html
+++ b/contact/index.html
@@ -11,7 +11,7 @@
   <header class="header">
     <nav class="navbar">
       <div class="nav-links">
-        <a href="index.html">Back</a>
+        <a href="/">Back</a>
         <a href="#">Blog</a>
       </div>
     </nav>
