--- a/contact/index.html
+++ b/contact/index.html
@@ -11,8 +11,8 @@
   <header class="header">
     <nav class="navbar">
       <div class="nav-links">
-        <a href="/">Back</a>
-        <a href="#">Blog</a>
+        <a href="/">← Back</a>
+        <a href="https://medium.com/@ahmedarabyy" target="_blank">Blog</a>
       </div>
     </nav>
   </header>
