--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ahmed Araby is the founder and talent acquisition lead at Instant Hires, helping SaaS startups scale with vetted sales talent. Learn more about his journey and approach.">
-  <title>Ahmed Araby – Founder of Instant Hires | Talent Acquisition</title>
+  <meta name="description" content="Ahmed Araby is the founder of The Circle, a coworking space in Alexandria built for freelancers and remote workers. Discover his journey from engineering to creating a thriving hub for remote professionals.">
+  <title>Ahmed Araby – Founder of The Circle | Coworking Space in Alexandria</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -16,16 +16,16 @@
       </div>
     </nav>
   </header>
-  <main class="main-content">
-    <img src="ahmed.jpeg" alt="Ahmed Araby – Founder of Instant Hires" class="profile-img" />
-    <h1>Ahmed Araby</h1>
-    <h2>Founder & Talent Acquisition Manager at <a href="https://www.instant-hires.com" class="gray-link">Instant Hires</a></h2>
-    <div class="bio-card">
-      <p>Ahmed Araby is a seasoned SaaS sales leader with over 8 years of experience working closely with early-stage startups to build and scale their sales operations. With a strong foundation in technical sales, team leadership, and revenue growth, Ahmed has helped SaaS companies refine their sales strategy, manage high-performing pipelines, and grow agile sales teams from scratch.</p>
-      <p>Ahmed holds a Bachelor's degree in Engineering, which adds a structured and analytical approach to his sales methodology — blending technical insight with customer-driven growth.</p>
-      <p>He later founded <a href="https://www.instant-hires.com" class="gray-link">Instant Hires</a>, a platform built to help startups find experienced salespeople without the usual hiring headaches. The focus is on flexibility and speed — giving founders direct access to capable, vetted professionals ready to contribute immediately to growth.</p>
-      <p>Ahmed continues to empower startups by bridging the gap between ambition and execution, ensuring that visionary ideas are backed by sales teams capable of delivering real results.</p>
-    </div>
-  </main>
+ <main class="main-content">
+  <img src="ahmed.jpeg" alt="Ahmed Araby – Founder of The Circle" class="profile-img" />
+  <h1>Ahmed Araby</h1>
+  <h2>Founder of <a href="https://www.circleworkspace.com" class="gray-link">The Circle</a></h2>
+  <div class="bio-card">
+    <p>Ahmed Araby is an entrepreneur and engineer with a vision for reshaping the way people work. Holding a Bachelor's degree in Electrical Engineering, Ahmed has always been an advocate of remote work.</p>
+    <p>Throughout his college years, he experienced firsthand the challenges remote workers face: lack of community, distraction-filled environments, and the struggle to find a professional yet inspiring place to focus. This inspired him to build <a href="https://www.circleworkspace.com" class="gray-link">The Circle</a>, a coworking space in the heart of Alexandria designed exclusively for freelancers and remote workers.</p>
+    <p>The Circle was founded with one simple mission: <strong>to create an environment where remote professionals can thrive</strong>. Today, it serves as more than just a workspace — it’s a community where productivity meets belonging.</p>
+    <p>Ahmed continues to champion the future of work by creating spaces that bring together ambition, creativity, and collaboration under one roof.</p>
+  </div>
+</main>
 </body>
 </html>
