--- a/contact/index.html
+++ b/contact/index.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Get in touch with Ahmed Araby, founder of Instant Hires. For inquiries, collaborations, or conversations, feel free to reach out directly or via LinkedIn.">
-  <title>Contact Ahmed Araby – Let’s Connect</title>
+  <meta name="description" content="Get in touch with Ahmed Araby, founder of The Circle coworking space in Alexandria. Reach out for inquiries, collaborations, or to learn more about creating the perfect remote work environment.">
+  <title>Contact Ahmed Araby – Founder of The Circle</title>
   <link rel="stylesheet" href="/style.css">
 </head>
 <body>
   <header class="header">
     <nav class="navbar">
       <div class="nav-links">
-       <a href="/">Home</a>
+        <a href="/">Home</a>
         <a href="https://medium.com/@ahmedarabyy" target="_blank">Blog</a>
       </div>
     </nav>
@@ -19,8 +19,9 @@
   <main class="main-content">
     <h1>Contact Ahmed</h1>
     <div class="bio-card">
-      <p>Email: <a class="gray-link" href="mailto:ahmed@instant-hires.com">ahmed@instant-hires.com</a></p>
-      <p>LinkedIn: <a class="gray-link" href="https://www.linkedin.com/in/ahmeddaraby/">linkedin.com/in/ahmeddaraby</a></p>
+      <p>Email: <a class="gray-link" href="mailto:ahmed@circleworkspace.com">ahmed@circleworkspace.com</a></p>
+      <p>LinkedIn: <a class="gray-link" href="https://www.linkedin.com/in/ahmeddaraby/" target="_blank">linkedin.com/in/ahmeddaraby</a></p>
+      <p>Location: The Circle, Syria Street, Alexandria, Egypt</p>
     </div>
   </main>
 </body>
