--- a/contact/index.html
+++ b/contact/index.html
@@ -19,9 +19,9 @@
   <main class="main-content">
     <h1>Contact Ahmed</h1>
     <div class="bio-card">
-      <p>Email: <a class="gray-link" href="mailto:contact@circleworkspace.com">ahmed@circleworkspace.com</a></p>
+      <p>Email: <a class="gray-link" href="mailto:contact@circleworkspace.com">contact@circleworkspace.com</a></p>
       <p>LinkedIn: <a class="gray-link" href="https://www.linkedin.com/in/ahmeddaraby/" target="_blank">linkedin.com/in/ahmeddaraby</a></p>
-      <p>Location: The Circle, Syria Street, Alexandria, Egypt</p>
+      <p>Location: the circle, 15 Syria Street, Alexandria, Egypt</p>
     </div>
   </main>
 </body>
