--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <p>Ahmed Araby is an entrepreneur and engineer with a vision for reshaping the way people work. Holding a Bachelor's degree in Electrical Engineering, Ahmed has always been an advocate of remote work.</p>
     <p>Throughout his college years, he experienced firsthand the challenges remote workers face: lack of community, distraction-filled environments, and the struggle to find a professional yet inspiring place to focus. This inspired him to build <a href="https://www.circleworkspace.com" class="gray-link">The Circle</a>, a coworking space in the heart of Alexandria designed exclusively for freelancers and remote workers.</p>
     <p>The Circle was founded with one simple mission: <strong>to create an environment where remote professionals can thrive</strong>. Today, it serves as more than just a workspace — it’s a community where productivity meets belonging.</p>
-    <p>Ahmed continues to champion the future of work by creating spaces that bring together ambition, creativity, and collaboration under one roof.</p>
+    <p>Ahmed continues to lead the future of remote work by creating spaces that bring together ambition, creativity, and collaboration under one roof.</p>
   </div>
 </main>
 </body>
