--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
  <main class="main-content">
   <img src="ahmed.jpeg" alt="Ahmed Araby – Founder of The Circle" class="profile-img" />
   <h1>Ahmed Araby</h1>
-  <h2>Founder of <a href="https://www.circleworkspace.com" class="gray-link">The Circle</a></h2>
+  <h2>Founder of <a href="https://www.circleworkspace.com" class="gray-link">the circle</a></h2>
   <div class="bio-card">
     <p>Ahmed Araby is an entrepreneur and engineer with a vision for reshaping the way people work. Holding a Bachelor's degree in Electrical Engineering, Ahmed has always been an advocate of remote work.</p>
     <p>Throughout his college years, he experienced firsthand the challenges remote workers face: lack of community, distraction-filled environments, and the struggle to find a professional yet inspiring place to focus. This inspired him to build <a href="https://www.circleworkspace.com" class="gray-link">The Circle</a>, a coworking space in the heart of Alexandria designed exclusively for freelancers and remote workers.</p>
