--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Ahmed Araby is the founder of The Circle, a coworking space in Alexandria built for freelancers and remote workers. Discover his journey from engineering to creating a thriving hub for remote professionals.">
-  <title>Ahmed Araby – Founder of The Circle | Coworking Space in Alexandria</title>
+  <meta name="description" content="Ahmed Araby is the founder of The Circle Workspace, a coworking space in Alexandria built for freelancers and remote workers. Discover his journey from engineering to creating a thriving hub for remote professionals.">
+  <title>Ahmed Araby – Founder of The Circle Workspace | Coworking Space in Alexandria</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
